<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_progress"
        android:icon="@drawable/ic_chart_bar"
        android:title="@string/title_progress" />
    <item
        android:id="@+id/navigation_leaderboard"
        android:icon="@drawable/ic_trophy"
        android:title="@string/title_ranks" />
    <item
        android:id="@+id/navigation_favourites"
        android:icon="@drawable/ic_star"
        android:title="@string/title_favs" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_user"
        android:title="@string/title_profile" />
</menu>
